k8s/microfront-gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microfront-gitops
  namespace: microfront
  labels:
    app: microfront-gitops
spec:
  type: ClusterIP
  selector:
    app: microfront-gitops
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
