k8s/microfront-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microfront-gitops
  namespace: microfront
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /microfront-gitops(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: microfront-gitops
                port:
                  number: 80
